# UdacityMPC

./: .gitignore
Ipopt-3.12.7/: Makefile  config.status  libtool
Ipopt-3.12.7/Ipopt/: Makefile  config.status  ipopt-uninstalled.pc  ipoptamplinterface-uninstalled.pc
Ipopt-3.12.7/Ipopt/contrib/sIPOPT/src/: Makefile
Ipopt-3.12.7/Ipopt/doxydoc/: doxygen.conf
Ipopt-3.12.7/Ipopt/src/Algorithm/: Makefile
Ipopt-3.12.7/Ipopt/src/Algorithm/Inexact/: Makefile
Ipopt-3.12.7/Ipopt/src/Algorithm/LinearSolvers/: Makefile
Ipopt-3.12.7/Ipopt/src/Apps/: Makefile
Ipopt-3.12.7/Ipopt/src/Apps/AmplSolver/: Makefile  ipopt  libipoptamplinterface.la
Ipopt-3.12.7/Ipopt/src/Apps/CUTErInterface/: Makefile
Ipopt-3.12.7/Ipopt/src/Common/: Makefile
Ipopt-3.12.7/Ipopt/src/Interfaces/: Makefile  libipopt.la
Ipopt-3.12.7/Ipopt/src/LinAlg/: Makefile
Ipopt-3.12.7/Ipopt/test/: Makefile  hs071_c  hs071_cpp  hs071_f
Ipopt-3.12.7/Ipopt/test/.libs/: lt-hs071_c  lt-hs071_cpp  lt-hs071_f
Ipopt-3.12.7/doxydoc/: doxygen.conf
global_kinematic_model/src/: main.cpp
mpc_to_line/: CMakeLists.txt
mpc_to_line/src/: Ipopt_MPC.cpp  Ipopt_MPC.h  Ipopt_MPC_naive.cpp  Ipopt_MPC_naive.h  Ipopt_MPC_one_step.cpp  Ipopt_MPC_one_step.h  MPC.cpp  MPC.h  apply_ipopt_example.cpp  apply_ipopt_example.hpp  apply_ipopt_kinematic_model.cpp  apply_ipopt_kinematic_model.hpp  custom_MPC.cpp  custom_MPC.h  ipopt_without_cppad_example.hpp  main.cpp  test_custom.cpp  test_ipopt_MPC.cpp  test_ipopt_MPC_single_step.cpp  test_naive_ipopt_MPC.cpp
mpc_to_line/src/n_steps_kinematics_model/: apply_ipopt_n_steps_kinematics_model.cpp  apply_ipopt_n_steps_kinematics_model.hpp
polyfit/src/: main.cpp
(+8 files in other folders)
